fix : hide scrollbar sidebar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -268,3 +268,14 @@ input[type='number']::-webkit-outer-spin-button {
     height: 60px;
   }
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.sidebar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.sidebar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
